# jobasha

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  release.sh
src/: get_game_config.rs  get_lists.rs  get_plugins.rs  leveled_lists.rs  main.rs  make_output_plugin.rs  show_result.rs  show_summary.rs  util.rs  write_output_plugin.rs
src/config/: mod.rs  options.rs  settings.rs  util.rs
src/get_plugins/: get_game_config.rs  get_plugins_to_compare.rs  mod.rs
src/get_self_config/: mod.rs  options.rs  settings.rs  util.rs
src/input/: merge.rs  mod.rs  structs.rs
src/leveled_lists/: messages.rs  records.rs
src/leveled_lists/records/: self_macro.rs
src/merge/: log.rs  mod.rs  raw_plugins.rs  ref_records.rs  subrecord_helpers.rs
src/merge/log/: merge_log.rs  option_record_merge_log.rs  record_merge_log.rs
src/merge/ref_records/: bsgn.rs  cell.rs  cont.rs  crea.rs  generic.rs  mgef.rs  npc_.rs  race.rs  skil.rs  tests.rs
src/merge/ref_records/cell/: specific.rs  tests.rs
src/merge/ref_records/cell/specific/: get_previous_cell_option_field.rs  mark_equal_count_changes.rs  multipatch_cellnames.rs  multipatch_fogbug.rs  primitive.rs  redundant_values.rs  sync_secondary_fog_density.rs
src/merge/ref_records/cell/tests/: basic.rs  cellnames.rs  complex.rs  fogbug.rs  multi.rs  specific_merge_options.rs
src/merge/ref_records/crea/: specific.rs  tests.rs
src/merge/ref_records/crea/specific/: mark_equal_count_changes.rs  multipatch_crea.rs
src/merge/ref_records/crea/tests/: ai_packages.rs  basic.rs  complex.rs  multi.rs  summons.rs  travel_destinations.rs
src/merge/ref_records/generic/: count_changes_macro.rs  fields_are_equal_macro.rs  make_merge_macro.rs  method_macro.rs  print_as_macro.rs  show_flags_macro.rs
src/merge/ref_records/mgef/: tests.rs
src/merge/ref_records/npc_/: self_macro.rs  specific.rs  tests.rs
src/merge/ref_records/npc_/tests/: ai_packages.rs  basic.rs  complex.rs  multi.rs  npc_stats.rs  redundant_values.rs  travel_destinations.rs
src/merge/ref_records/npc_/tests/npc_stats/: complex.rs  debug.rs  log.rs
src/merge/ref_records/tests/: test_basic.rs  test_debug.rs  test_flags.rs  test_init.rs  test_log.rs  test_merge.rs
src/merge/subrecord_helpers/: ai_package.rs  generic.rs  inventory.rs  spells.rs  travel_destinations.rs
src/merge/subrecord_helpers/ai_package/: self_macro.rs  tests.rs
src/merge/subrecord_helpers/ai_package/tests/: basic.rs  debug.rs  log.rs
src/merge/subrecord_helpers/generic/: super_macro.rs  tests.rs
src/merge/subrecord_helpers/inventory/: self_macro.rs  super_macro.rs  tests.rs
src/merge/subrecord_helpers/spells/: self_macro.rs  super_macro.rs  tests.rs
src/merge/subrecord_helpers/travel_destinations/: self_macro.rs
src/output/: compare_plugins.rs  make_lists.rs  mod.rs  show_messages.rs  structs.rs  write_plugins.rs
