[package]
name = "jobasha"
version = "0.3.0"
authors = ["alvazir <basha.alvazir@gmail.com>"]
edition = "2021"
rust-version = "1.74.0"
description = "Jobasha - TES3 leveled list tool"
readme = "README.md"
homepage = "https://www.nexusmods.com/morrowind/mods/52707"
repository = "https://github.com/alvazir/jobasha"
license = "GPL-3.0-or-later"
keywords = ["cli", "tes3", "morrowind", "openmw"]
categories = ["command-line-utilities", "game development"]
publish = false

[badges]
maintenance = { status = "actively-developed" }

[dependencies.tes3]
# path = "../tes3"
git = "https://github.com/Greatness7/tes3"
rev = "4a08175f"
# branch = "dev"
default-features = false
features = ["esp"]

[dependencies]
# CLI
clap = { version = "~4.4.11", features = ["derive", "suggestions", "wrap_help"] }
# settings file
confique = { version = "~0.2.4", default-features = false, features = ["toml"] }
# required by confique
serde = "~1.0.193"
# error management
anyhow = "~1.0.75"
# find openmw.cfg
dirs = "~5.0.1"
# find files in parallel
rayon = "~1.8.0"
# better fs errors
fs-err = "~2.11.0"
# colored output
console = "~0.15.7"
# progress bar
indicatif = "~0.17.7"
# get date to put into result's name
chrono = "~0.4.31"

[profile.release-lto]
inherits = "release"
strip = true
lto = true
panic = "abort"
codegen-units = 1

[profile.release-lto-darwin]
inherits = "release"
# strip = true
lto = true
panic = "abort"
codegen-units = 1
