[package]
name = "jobasha"
version = "0.5.0"
authors = ["alvazir <basha.alvazir@gmail.com>"]
edition = "2021"
rust-version = "1.75.0"
description = "Jobasha - TES3 leveled list tool"
readme = "README.md"
homepage = "https://www.nexusmods.com/morrowind/mods/52707"
repository = "https://github.com/alvazir/jobasha"
license = "GPL-3.0-or-later"
keywords = ["cli", "tes3", "morrowind", "openmw"]
categories = ["command-line-utilities", "game development"]
publish = false

[badges]
maintenance = { status = "actively-developed" }

[dependencies.tes3]
# path = "../tes3"
git = "https://github.com/Greatness7/tes3"
rev = "de4b633"
# branch = "dev"
default-features = false
features = ["esp"]

[dependencies]
# CLI
clap = { version = "~4.4.18", features = ["derive", "suggestions", "wrap_help"] }
# settings file
confique = { version = "~0.2.5", default-features = false, features = ["toml"] }
# required by confique
serde = "~1.0.196"
# error management
anyhow = "~1.0.79"
# find openmw.cfg
dirs = "~5.0.1"
# find files in parallel
rayon = "~1.8.1"
# better fs errors
fs-err = "~2.11.0"
# colored output
console = "~0.15.8"
# progress bar
indicatif = "~0.17.7"
# get date to put into result's name
chrono = "~0.4.33"
# delev to random level
rand = "~0.8.5"
# memory usage
# peak_alloc = "~0.2.0" # disabled due to slowing down the program

[profile.release-lto]
inherits = "release"
strip = true
lto = true
panic = "abort"
codegen-units = 1

[profile.release-lto-darwin]
inherits = "release"
# strip = true
lto = true
panic = "abort"
codegen-units = 1
